--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <style>
         /* Custom styles for the app's overall look and feel */
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Roboto', sans-serif;
         }
         .page-content {
             animation: fadeIn 0.5s ease-in-out;
