--- a/index.html
+++ b/index.html
@@ -509,29 +509,29 @@
         // --- COMPONENT: App ---
         // The main application component that handles page routing.
         function App() {
-            const [currentPage, setCurrentPage] = useState('home');
-
-            return (
-                <div className="min-h-screen bg-gray-100">
-                    <header className="bg-primaryBlue text-white py-6 text-center flex flex-col items-center">
-                        <h1 className="text-4xl font-bold">Jesus' Commandments App</h1>
-                        <p className="mt-2">Learn and live the commands of Jesus</p>
-                    </header>
-                    <nav className="flex justify-center space-x-4 py-4 bg-white shadow-sm">
-                        <button
-                            className={`font-semibold transition-colors duration-200 ${currentPage === 'home' ? 'text-primaryBlue underline' : 'text-gray-500 hover:text-primaryBlue'}`}
-                            onClick={() => setCurrentPage('home')}
-                            aria-label="Navigate to home page"
-                        >
-                            Home
-                        </button>
-                        <button
-                            className={`font-semibold transition-colors duration-200 ${currentPage === 'quiz' ? 'text-primaryBlue underline' : 'text-gray-500 hover:text-primaryBlue'}`}
-                            onClick={() => setCurrentPage('quiz')}
-                            aria-label="Navigate to learning quiz"
-                        >
-                           <h1 style={{ color: 'red', fontWeight: 'bold' }}>Learning to Follow Jesus</h1>
-                                  </button>
+    const [currentPage, setCurrentPage] = useState('home');
+    return (
+        <div className="min-h-screen bg-gray-100">
+            <header className="bg-primaryBlue text-white py-6 text-center flex flex-col items-center">
+                <h1 className="text-4xl font-bold">Jesus' Commandments App</h1>
+                <p className="mt-2">Learn and live the commands of Jesus</p>
+            </header>
+            <nav className="flex justify-center space-x-4 py-4 bg-white shadow-sm">
+                <button
+                    className={`font-semibold transition-colors duration-200 ${currentPage === 'home' ? 'text-primaryBlue underline' : 'text-gray-500 hover:text-primaryBlue'}`}
+                    onClick={() => setCurrentPage('home')}
+                    aria-label="Navigate to home page"
+                >
+                    Home
+                </button>
+                <button
+                    className={`font-semibold transition-colors duration-200 ${currentPage === 'quiz' ? 'text-primaryBlue underline' : 'text-gray-500 hover:text-primaryBlue'}`}
+                    onClick={() => setCurrentPage('quiz')}
+                    aria-label="Navigate to learning quiz"
+                    style={{ color: 'red', fontWeight: 'bold' }}
+                >
+                    Learning to Follow Jesus
+                </button>
             </nav>
             {currentPage === 'home' ? <HomePage /> : <QuizPage setPage={setCurrentPage} />}
             <div className="text-center py-6 bg-gray-100">
@@ -546,9 +546,6 @@
         </div>
     );
 }
+const root = ReactDOM.createRoot(document.getElementById('root'));
+root.render(<App />);
 
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<App />);
-    </script>
-</body>
-</html>
